[package]
name = "Taskplaner"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cursive = "0.21.1"
chrono = "0.4.38"
once_cell = "1.20.2"
uuid = { version = "1.11.0", features = ["v4"] }
rand = "0.9.0-alpha.2"
bcrypt = "0.15.1"